# open-cli

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-android.bat  compilers.toml  install.sh  opencli.toml
include/: build.h  commands.h  compiler_utils.h  console_utils.h  crypto_utils.h  download_utils.h  include_utils.h  install.h  process_utils.h  security_utils.h  toml_utils.h
src/: main.c
src/commands/: build_command.c  install_command.c  run_command.c  setup_command.c
src/utils/: compiler_utils.c  console_utils.c  crypto_utils.c  download_utils.c  include_utils.c  process_utils.c  security_utils.c  toml_utils.c
